# asciicam

./: .gitignore  README.md  camera.py  main.py  pyproject.toml  test_virtual_cam.py
